--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Layout from '../components/Layout.astro';
 	<main>
       <div class="header">
         <div class="logo">
-		  PUT THE LOGO HERE
+          <img src="https://res.cloudinary.com/dzkoxrsdj/image/upload/v1652291187/astro_1_c1yk5a.png">
         </div>
       </div>
 			<div class="resource-list">
