--- a/src/style/demo-styling.scss
+++ b/src/style/demo-styling.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
 
-$font-family: 'Poppins', sans-serif;
+$main-family: 'Poppins', sans-serif;
 $color-bg: linear-gradient(180deg, #FFFFFF 0%, #AEC6DC 100%);
 // Controls the blob blur gradient colors within the body bckground image url
 $top-right-blur-1: '20C6B7';
@@ -10,7 +10,7 @@ $bttm-left-blur-2: 'FFCDB1';
 
 html {
     background: $color-bg;
-    font-family: $font-family;
+    font-family: $main-family;
     min-height: 100%;
   }
 
@@ -24,7 +24,7 @@ body{
     flex-direction: column;
     align-items: center,;
     min-height: 100vh;
-  }
+}
 
 .header{
     text-align: center;
@@ -36,83 +36,83 @@ body{
       padding: 30px 0;
       width: 100%;
     }
-  }
+}
 
-  .bttns{
-    margin-bottom: 5%;
-  }
+.bttns{
+  margin-bottom: 5%;
+}
 
-  .bttn{
-    padding: 15px;
-    border-radius: 5px;
-    width: 150px;
-    margin: 0 1%;
-    text-decoration: none;
-  }
+.bttn{
+  padding: 15px;
+  border-radius: 5px;
+  width: 150px;
+  margin: 0 1%;
+  text-decoration: none;
+}
 
-  .bttn.primary{
-    background: #21A69A;
-    border: none;
-    color: white;
-    box-shadow: -3px 3px 5px rgb(35 33 33 / 23%);
-    &:hover {
-      background: #21a69a;
-      box-shadow: inset 3px 4px 10px rgb(35 33 33 / 40%);
-    }
+.bttn.primary{
+  background: #21A69A;
+  border: none;
+  color: white;
+  box-shadow: -3px 3px 5px rgb(35 33 33 / 23%);
+  &:hover {
+    background: #21a69a;
+    box-shadow: inset 3px 4px 10px rgb(35 33 33 / 40%);
   }
+}
 
-  .bttn.secondary{
-    background: transparent;
-    border: #093C4F 2px solid;
-    color: #0D1D24;
-    &:hover {
-      background: #05171f;
+.bttn.secondary{
+  background: transparent;
+  border: #093C4F 2px solid;
+  color: #0D1D24;
+  &:hover {
+    background: #05171f;
       color: white;
-    }
   }
+}
 
-  .resource-list {
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: larger;
-    padding: 10px;
-    text-align: center;
+.resource-list {
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: larger;
+  padding: 10px;
+  text-align: center;
 
-    h2{
-      line-height: 34px;
-      width: 50%;
-      margin: 0 auto;
-      padding-bottom: 5%;
-        @media only screen and (max-width: 450px){
-            width: 90%;
-            padding: 5%;
-      }
-    }
-
-    ul {
-      text-align: left;
-      margin: 0 auto;
-      list-style: none;
-      display: flex;
-      justify-content: center;
-      padding: 2%;
-    }
-
-    li{
-      padding: 2%;
-      font-weight: bold;
-    }
-
-    a {
-      color: black;
-      line-height: 30px;
-    }
-  }
-
-  footer {
+  h2{
+    line-height: 34px;
+    width: 50%;
     margin: 0 auto;
-    width: 100%;
-    text-align: center;
-    img {
-      width: 20px;
+    padding-bottom: 5%;
+    @media only screen and (max-width: 450px){
+      width: 90%;
+      padding: 5%;
     }
   }
+
+  ul {
+    text-align: left;
+    margin: 0 auto;
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    padding: 2%;
+  }
+
+  li{
+    padding: 2%;
+    font-weight: bold;
+  }
+
+  a {
+    color: black;
+    line-height: 30px;
+  }
+}
+
+footer {
+  margin: 0 auto;
+  width: 100%;
+  text-align: center;
+  img {
+    width: 20px;
+  }
+}
