--- a/src/style/demo-styling.css
+++ b/src/style/demo-styling.css
@@ -4,7 +4,7 @@
   --main-family: 'Poppins', sans-serif;
   --color-bg: linear-gradient(180deg, #FFFFFF 0%, #AEC6DC 100%);
 
-  // Controls the blob blur gradient colors within the body bckground image url
+  /* Controls the blob blur gradient colors within the main tag's svg */
   --top-right-blur-1: #20C6B7;
   --top-right-blur-2: #4D9ABF;
   --bttm-left-blur-1: #FF5C02;
@@ -33,14 +33,16 @@ html {
 
 .header{
     text-align: center;
-    h1{
-      padding-top:5%;
-      margin: 0;
-    }
-    .logo img {
-      padding: 30px 0;
-      width: 100%;
-    }
+}
+
+.header h1 {
+  padding-top:5%;
+  margin: 0;
+}
+
+.header .logo img {
+  padding: 30px 0;
+  width: 100%;
 }
 
 .bttns{
@@ -56,24 +58,29 @@ html {
 }
 
 .bttn.primary{
+  display: inline-block;
+  width: max-content;
   background: #21A69A;
   border: none;
   color: white;
   box-shadow: -3px 3px 5px rgb(35 33 33 / 23%);
-  &:hover {
-    background: #21a69a;
-    box-shadow: inset 3px 4px 10px rgb(35 33 33 / 40%);
-  }
+}
+
+.bttn.primary:hover {
+  background: #21a69a;
+  box-shadow: inset 3px 4px 10px rgb(35 33 33 / 40%);
+  /* -webkit-box-shadow: inset 3px 4px 10px rgb(35 33 33 / 40%); */
 }
 
 .bttn.secondary{
   background: transparent;
   border: #093C4F 2px solid;
   color: #0D1D24;
-  &:hover {
-    background: #05171f;
-      color: white;
-  }
+}
+
+.bttn.secondary:hover {
+  background: #05171f;
+  color: white;
 }
 
 .resource-list {
@@ -81,43 +88,47 @@ html {
   font-size: larger;
   padding: 10px;
   text-align: center;
+}
 
-  h2{
-    line-height: 34px;
-    width: 50%;
-    margin: 0 auto;
-    padding-bottom: 5%;
-    @media only screen and (max-width: 450px){
-      width: 90%;
-      padding: 5%;
-    }
-  }
+.resource-list h2 {
+  line-height: 34px;
+  width: 50%;
+  margin: 0 auto;
+  padding-bottom: 5%;
+}
 
-  ul {
-    text-align: left;
-    margin: 0 auto;
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    padding: 2%;
-  }
+@media only screen and (max-width: 450px) {
+  .resource-list h2 {
+    width: 90%;
+    padding: 5%;
+ }
+}
 
-  li{
-    padding: 2%;
-    font-weight: bold;
-  }
+.resource-list ul {
+  text-align: left;
+  margin: 0 auto;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  padding: 2%;
+}
 
-  a {
-    color: black;
-    line-height: 30px;
-  }
+.resource-list li {
+  padding: 2%;
+  font-weight: bold;
+}
+
+.resource-list a {
+  color: black;
+  line-height: 30px;
 }
 
 footer {
   margin: 0 auto;
   width: 100%;
   text-align: center;
-  img {
-    width: 20px;
-  }
+}
+
+footer img {
+  width: 20px;
 }
