--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,22 +4,26 @@ import Layout from '../components/Layout.astro';
 
 <Layout title="Astro Quickstart">
 	<main>
+    <svg id="background" width='1728' height='1235' viewBox="0 0 1728 1235" fill='none' xmlns='http://www.w3.org/2000/svg'><g opacity='0.75' filter='url(#filter0_f_39_143)'><circle cy='1000' r='264' fill='url(#paint0_linear_39_143)'/></g><g opacity='0.65' filter='url(#filter1_f_39_143)'><circle cx='1720' cy='264' r='379' fill='url(#paint1_linear_39_143)'/></g><defs><filter id='filter0_f_39_143' x='-485' y='515' width='970' height='970' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'><feFlood flood-opacity='0' result='BackgroundImageFix'/><feBlend mode='normal' in='SourceGraphic' in2='BackgroundImageFix' result='shape'/><feGaussianBlur stdDeviation='110.5' result='effect1_foregroundBlur_39_143'/></filter><filter id='filter1_f_39_143' x='1120' y='-336' width='1200' height='1200' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'><feFlood flood-opacity='0' result='BackgroundImageFix'/><feBlend mode='normal' in='SourceGraphic' in2='BackgroundImageFix' result='shape'/><feGaussianBlur stdDeviation='110.5' result='effect1_foregroundBlur_39_143'/></filter><linearGradient id='paint0_linear_39_143' x1='196.5' y1='902' x2='-2.55853e-05' y2='1264' gradientUnits='userSpaceOnUse'><stop stop-color="var(--bttm-left-blur-1)"/><stop offset='1' stop-color="var(--bttm-left-blur-2)"/></linearGradient><linearGradient id='paint1_linear_39_143' x1='1720' y1='-115' x2='1720' y2='643' gradientUnits='userSpaceOnUse'><stop stop-color="var(--top-right-blur-1)"/><stop offset='1' stop-color="var(--top-right-blur-2)" /></linearGradient></defs></svg>     
+    <div id="content">
       <div class="header">
+        <h1>Quickstart Template</h1>
         <div class="logo">
-          <img src="https://res.cloudinary.com/dzkoxrsdj/image/upload/v1652291187/astro_1_c1yk5a.png">
+          <img src="https://res.cloudinary.com/dzkoxrsdj/image/upload/v1652291187/astro_1_c1yk5a.png" alt="Netlify plus Astro banner">
+        </div>
+        <div class="bttns">
+          <a href="https://app.netlify.com/start/deploy?repository=https://github.com/netlify-templates/astro-quickstart" class="bttn primary">Deploy to Netlify</a>
+          <a href="https://github.com/netlify-templates/astro-quickstart" class="bttn secondary">View Repo</a>
         </div>
       </div>
 			<div class="resource-list">
         <h2>
-            Here are some resources to help you on your Astro + Netlify journey:
+          This is a bare-bones Astro project that has everything you need to quickly deploy it to Netlify
         </h2>
         <ul>
           <li>
-            <a href="https://github.com/netlify-templates/astro-quickstart">The Astro Quickstart repo</a>
-          </li>
-          <li>
             <a href="https://ntl.fyi/38O9wmY">Netlify Blog: Astro posts</a>
-						</li>
+					</li>
           <li>
             <a href="https://ntl.fyi/3KHGtyz">Netlify Docs</a>
           </li>
@@ -31,45 +35,6 @@ import Layout from '../components/Layout.astro';
       <footer class="footer">
         Made with <a href="https://ntl.fyi/3P0dwBi"><img src="https://res.cloudinary.com/dzkoxrsdj/image/upload/v1646714899/netliheart_ezlkim.svg" alt="Netlify Logo" /></a> for you!
       </footer>
+    </div>
 	</main>
 </Layout>
-<style>
-  html {
-		background-color: unset;
-	}
-	.logo img {
-    padding: 30px 0;
-    width: 100%;
-  }
-
-  .resource-list {
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: larger;
-    padding: 10px;
-    text-align: center;
-  }
-
-  .resource-list ul {
-      text-align: left;
-      margin: 0 auto;
-      width: 300px;
-  }
-
-  .resource-list a {
-    color: black;
-    line-height: 30px;
-  }
-
-  footer {
-    bottom: 10px;
-    font-family: Helvetica, Arial, sans-serif;
-    margin: 0 auto;
-    width: 100%;
-    position: fixed;
-    text-align: center;
-  }
-
-  footer img {
-      width: 20px;
-  }
-</style>
