--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Layout from '../components/Layout.astro';
           <img src="https://res.cloudinary.com/dzkoxrsdj/image/upload/v1652291187/astro_1_c1yk5a.png" alt="Netlify plus Astro banner">
         </div>
         <h2>
-          This is a bare-bones Astro project that has everything you need to quickly deploy it to Netlify
+          11111This is a bare-bones Astro project that has everything you need to quickly deploy it to Netlify
         </h2>
         <div class="bttns">
           <a href="https://app.netlify.com/start/deploy?repository=https://github.com/netlify-templates/astro-quickstart" class="bttn primary">Deploy to Netlify</a>
@@ -22,10 +22,10 @@ import Layout from '../components/Layout.astro';
 			<div class="resource-list">
         <ul>
           <li>
-            <a href="https://ntl.fyi/38O9wmY">Netlify Blog: Astro posts</a>
+            <a href="https://ntl.fyi/38O9wmY">111Netlify Blog: Astro posts</a>
 					</li>
           <li>
-            <a href="https://ntl.fyi/3KHGtyz">Netlify Docs</a>
+            <a href="https://ntl.fyi/3KHGtyz">1111Netlify Docs</a>
           </li>
           <li>
             <a href="https://docs.astro.build/en/getting-started/">Astro Docs</a>
@@ -33,7 +33,7 @@ import Layout from '../components/Layout.astro';
         </ul>
       </div>
       <footer class="footer">
-        Made with <a href="https://ntl.fyi/3P0dwBi"><img src="https://res.cloudinary.com/dzkoxrsdj/image/upload/v1646714899/netliheart_ezlkim.svg" alt="Netlify Logo" /></a> for you! ??????
+        1111Made with <a href="https://ntl.fyi/3P0dwBi"><img src="https://res.cloudinary.com/dzkoxrsdj/image/upload/v1646714899/netliheart_ezlkim.svg" alt="Netlify Logo" /></a> for you! ??????
       </footer>
     </div>
 	</main>
