--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,37 +1,126 @@
----
-import Layout from '../layouts/Layout.astro';
----
-
-<Layout title="Astro Quickstart">
-	<main>
-    <svg id="background" width='1728' height='1235' viewBox="0 0 1728 1235" fill='none' xmlns='http://www.w3.org/2000/svg'><g opacity='0.75' filter='url(#filter0_f_39_143)'><circle cy='1000' r='264' fill='url(#paint0_linear_39_143)'/></g><g opacity='0.65' filter='url(#filter1_f_39_143)'><circle cx='1720' cy='264' r='379' fill='url(#paint1_linear_39_143)'/></g><defs><filter id='filter0_f_39_143' x='-485' y='515' width='970' height='970' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'><feFlood flood-opacity='0' result='BackgroundImageFix'/><feBlend mode='normal' in='SourceGraphic' in2='BackgroundImageFix' result='shape'/><feGaussianBlur stdDeviation='110.5' result='effect1_foregroundBlur_39_143'/></filter><filter id='filter1_f_39_143' x='1120' y='-336' width='1200' height='1200' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'><feFlood flood-opacity='0' result='BackgroundImageFix'/><feBlend mode='normal' in='SourceGraphic' in2='BackgroundImageFix' result='shape'/><feGaussianBlur stdDeviation='110.5' result='effect1_foregroundBlur_39_143'/></filter><linearGradient id='paint0_linear_39_143' x1='196.5' y1='902' x2='-2.55853e-05' y2='1264' gradientUnits='userSpaceOnUse'><stop stop-color="var(--bttm-left-blur-1)"/><stop offset='1' stop-color="var(--bttm-left-blur-2)"/></linearGradient><linearGradient id='paint1_linear_39_143' x1='1720' y1='-115' x2='1720' y2='643' gradientUnits='userSpaceOnUse'><stop stop-color="var(--top-right-blur-1)"/><stop offset='1' stop-color="var(--top-right-blur-2)" /></linearGradient></defs></svg>     
-    <div id="content">
-      <div class="header">
-        <h1>Quickstart Template</h1>
-        <div class="logo">
-          <img src="https://user-images.githubusercontent.com/43764894/223559085-8ff69d2f-4247-427f-a3a6-d2036b00082a.png" alt="Netlify plus Astro banner">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+<metaTags />
+    <meta property="title" content="Graphics for Good">
+    <meta property="og:title" content="Graphics for Good">
+    <title>Graphics for Good</title>
+  </head>
+  <body>
+<nav />
+    <header id="content">
+      <section>
+        <div>
+          <h1>Graphics for Good</h1>
+          <h2>Empowering Non-Profits Through the Power of Design!</h1>
         </div>
-        <h2>
-          This is a bare-bones Astro project that has everything you need to quickly deploy it to Netlify
-        </h2>
-        <div class="bttns">
-          <a href="https://app.netlify.com/start/deploy?repository=https://github.com/netlify-templates/astro-quickstart" class="bttn primary">Deploy to Netlify</a>
-          <a href="https://github.com/netlify-templates/astro-quickstart" class="bttn secondary">View Repo</a>
+      </section>
+    </header>
+    <main id="mission">
+      <div class="container">
+        <section id="mSection">
+          <h1>Our Mission</h1>
+          <div class="missiontext">
+            <p class="text" centered displayFlex style="--f-direction: column; --gap: 8px;">
+              <span style="text-align: justify;">"Our mission is to help create change in the world through design. We strive to provide free design help for nonprofits that support a wide range of causes."</span>
+              <span displayFlex style="--f-direction: row; justify-content: right;"> - Shikha Iyer, Club Founder</span>
+            </p>
+            <a style="margin-left: auto;" href="/mission" class="btn">Read More</a>
+          </div>
+        </section>
+        <span class="vHr"></span>
+        <section id="contact">
+          <h2 style="font-size: 2.25rem;">Interested in partnering with us?</h2>
+          <h1>Contact Us</h1>
+          <div id="contactDone" style="display: none;">
+            <h3 align="center" style="font-size: 25px; display: none; margin: 0;">Thank You For Submitting!</h2>
+          </div>
+          <form action="https://docs.google.com/forms/d/e/1FAIpQLSc4qjrt9QFOiGU4DHHjagYlVsYdS77KiXqwo967oeGySAVMnQ/formResponse" method="POST" style="">
+            <input type="text" name="entry.264713401" placeholder="Full Name" top required>
+            <input type="email" name="entry.2027702877" placeholder="Email Address" required>
+            <textarea type="text" name="entry.656122872" placeholder="Message" required></textarea>
+            <input type="hidden" name="entry.1445095683" value="true" />
+            <!-- add hidden Honeypot input to prevent spams -->
+            <input type="hidden" name="_gotcha" style="display:none!important">
+            <button type="submit" onclick="sendMessage()">Send</button>
+          </form>
+        </section>
+      </div>
+    </main>
+      <div hHr></div>
+    <main id="mwork" class="photos">
+      <section align="center">
+        <h1 style="--text-color: blue; cursor: pointer;" onclick="location.href = '/work?magic=true'" title="Click here to convert to list!">Member Work</h1>
+        <div class="carousel">
+          <a href="javascript:goBack(0)">
+            <img src="assets/arrows/L.svg" class="button" draggable="false">
+          </a>
+          <ul class="imgs">
+              <img src="assets/blank.png" draggable="false">
+              <img class="left" src="assets/members/isabelle/portfolio/previews/Birds-are-essential-for-our-environment!.png" draggable="false">
+              <img class="active" src="assets/members/shikha/portfolio/previews/Did-you-know.png" draggable="false">
+              <img class="right" src="assets/members/shikha/portfolio/previews/Women's-History-Month!.png" draggable="false">
+              <img src="assets/members/juhi/portfolio/previews/Little-Wishes-Hospital-Gown-Feb-2023_4.png" draggable="false">
+              <img src="assets/members/juhi/portfolio/previews/Little-Wishes-Hospital-Gown-Feb-2023_5.png" draggable="false">
+              <img src="assets/members/juhi/portfolio/previews/Little-Wishes-Hospital-Gown-Feb-2023_6.png" draggable="false">
+              <img src="assets/members/juhi/portfolio/previews/Little-Wishes-Hospital-Gown-Feb-2023_7.png" draggable="false">
+              <img src="assets/members/samantha/portfolio/previews/Help-save-the-oceans_1.png" draggable="false">
+              <img src="assets/members/samantha/portfolio/previews/Help-save-the-oceans_2.png" draggable="false">
+              <img src="assets/members/samantha/portfolio/previews/Help-save-the-oceans_3.png" draggable="false">
+              <img src="assets/members/samantha/portfolio/previews/Help-save-the-oceans_4.png" draggable="false">
+              <img src="assets/members/isabelle/portfolio/previews/DON'T-EAT-FROGS.png" draggable="false">
+              <img src="assets/members/isabelle/portfolio/previews/Untitled-(800-x-1000-px).png" draggable="false">
+              <img src="assets/members/shikha/portfolio/previews/Elarra.jpg" draggable="false">
+              <img src="assets/members/shikha/portfolio/previews/Fairy.jpg" draggable="false">
+              <img src="assets/members/shikha/portfolio/previews/c3.jpg" draggable="false">
+              <img src="assets/members/shikha/portfolio/previews/Rapunzel.jpg" draggable="false">
+              <!--<img src="assets/members/hanlin/portfolio/previews/G4G-Ad.png" draggable="false">-->
+              <img src="assets/blank.png" draggable="false">
+          </ul>
+          <a href="javascript:goForw(0)">
+            <img src="assets/arrows/R.svg" class="button" draggable="false">
+          </a>
         </div>
-      </div>
-			<div class="resource-list">
-        <ul>
-          <li>
-            <a href="https://ntl.fyi/38O9wmY">Netlify Blog: Astro posts</a>
-					</li>
-          <li>
-            <a href="https://ntl.fyi/3KHGtyz">Netlify Docs</a>
-          </li>
-          <li>
-            <a href="https://docs.astro.build/en/getting-started/">Astro Docs</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-	</main>
-</Layout>
+      </section>
+      <div hHr style="width: 800px;"></div>
+      <section align="center">
+        <h1 id="cphotos">Club Photos</h1>
+        <div class="carousel">
+          <a href="javascript:goBack(1)">
+            <img src="assets/arrows/L.svg" class="button" draggable="false">
+          </a>
+          <ul class="imgs">
+              <img src="assets/blank.png" draggable="false">
+              <img src="/assets/club_photos/previews/IMG_0496.jpg" draggable="false">
+              <img src="/assets/club_photos/previews/IMG_0497.jpg" draggable="false">
+              <img src="/assets/club_photos/previews/IMG_0498.jpg" draggable="false">
+              <img src="/assets/club_photos/previews/IMG_0499.jpg" draggable="false">
+              <img src="/assets/club_photos/previews/IMG_0500.jpg" draggable="false">
+              <img src="/assets/club_photos/previews/IMG_0504.jpg" draggable="false">
+              <img class="left" src="/assets/club_photos/previews/IMG_0505.jpg" draggable="false">
+              <img class="active" src="/assets/club_photos/previews/IMG_0506.jpg" draggable="false">
+              <img class="right" src="/assets/club_photos/previews/IMG_0507.jpg" draggable="false">
+              <img src="/assets/club_photos/previews/IMG_0508.jpg" draggable="false">
+              <img src="/assets/club_photos/previews/IMG_0509.jpg" draggable="false">
+              <img src="/assets/club_photos/previews/IMG_0510.jpg" draggable="false">
+              <img src="/assets/club_photos/previews/IMG_0512.jpg" draggable="false">
+              <img src="/assets/club_photos/previews/IMG_0513.jpg" draggable="false">
+              <img src="/assets/club_photos/previews/IMG_0514.jpg" draggable="false">
+              <img src="/assets/club_photos/previews/IMG_0515.jpg" draggable="false">
+              <img src="assets/blank.png" draggable="false">
+          </ul>
+          <a href="javascript:goForw(1)">
+            <img src="assets/arrows/R.svg" class="button" draggable="false">
+          </a>
+        </div>
+      </section>
+    </main>
+    <span style="display: none;" id="hidden" class="hidden" hidden tElement></span>
+    <script src="contact.js"></script>
+    <script src="modal.js"></script>
+    <script src="photos.js"></script>
+    <script src="carousel.js"></script>
+<globalScripts />
+<infoBox />
+  </body>
+</html>
