create some public/ files

--- a/src/components/globalscripts.astro
+++ b/src/components/globalscripts.astro
@@ -1,4 +1,4 @@
-    <script src="/script.js"></script>
-    <script src="/intersections.js"></script>
-    <script src="/nav.js"></script>
+    <script is:inline src="/script.js"></script>
+    <script is:inline src="/intersections.js"></script>
+    <script is:inline src="/nav.js"></script>
     <!--<script src="eruda.js"></script>-->
