--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -116,10 +116,10 @@
       </section>
     </main>
     <span style="display: none;" id="hidden" class="hidden" hidden tElement></span>
-    <script src="contact.js"></script>
-    <script src="modal.js"></script>
-    <script src="photos.js"></script>
-    <script src="carousel.js"></script>
+    <script is:inline src="contact.js"></script>
+    <script is:inline src="modal.js"></script>
+    <script is:inline src="photos.js"></script>
+    <script is:inline src="carousel.js"></script>
 <globalScripts />
 <infoBox />
   </body>
