--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -8,8 +8,8 @@
   </head>
   <body>
 <nav />
-    <script src="/members.js"></script>
-    <script src="/modal.js"></script>
+    <script is:inline src="/members.js"></script>
+    <script is:inline src="/modal.js"></script>
 <globalScripts />
 <infoBox />
   </body>
