--- a/src/pages/portal.astro
+++ b/src/pages/portal.astro
@@ -9,7 +9,7 @@
   </head>
   <body>
 <nav />
-    <script src="portalpw.js"></script>
+    <script is:inline src="portalpw.js"></script>
 <globalScripts />
 <infoBox />
   </body>
