--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -52,10 +52,10 @@
       </section>
     </main>
     <span style="display: none;" id="hidden" class="hidden" hidden tElement></span>
-    <script src="convertCarousel.js"></script>
-    <script src="carousel.js"></script>
-    <script src="work.js"></script>
-    <script src="modal.js"></script>
+    <script is:inline src="convertCarousel.js"></script>
+    <script is:inline src="carousel.js"></script>
+    <script is:inline src="work.js"></script>
+    <script is:inline src="modal.js"></script>
 <globalScripts />
 <infoBox />
   </body>
