--- a/src/pages/portal.astro
+++ b/src/pages/portal.astro
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-<metaTags />
-    <link rel="stylesheet" href="portal-items.css" />
-    <meta property="title" content="Member Portal | Graphics for Good">
-    <meta property="og:title" content="Member Portal | Graphics for Good">
-    <title>Member Portal | Graphics for Good</title>
-  </head>
-  <body>
-<nav />
-    <script is:inline src="portalpw.js"></script>
-<globalScripts />
-<infoBox />
-  </body>
-</html>
+---
+import Layout from '../layouts/Layout.astro'
+---
+<Layout title="Member Portal">
+  <script is:inline src="portalpw.js"></script>
+</Layout>
