--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,8 @@
 ---
-import metaTags from '../components/metatags.astro'
-import nav from '../components/nav.astro'
-import globalscripts from '../components/globalscripts.astro'
-import infobox from '../components/infobox.astro'
+import MetaTags from '../components/metatags.astro'
+import Nav from '../components/nav.astro'
+import GlobalScripts from '../components/globalscripts.astro'
+import InfoBox from '../components/infobox.astro'
 
 export interface Props {
 	title: string;
@@ -14,14 +14,14 @@ const { title } = Astro.props as Props;
 <!DOCTYPE html>
 <html lang="en">
   <head>
-<metaTags />
+<MetaTags />
     <title>{title} | Graphics for Good</title>
   </head>
   <body>
-<nav />
+<Nav />
     <slot />
     <span style="display: none;" id="hidden" class="hidden" hidden tElement></span>
-<globalScripts />
-<infoBox />
+<GlobalScripts />
+<InfoBox />
   </body>
 </html>
