use portal-items.scss

--- a/src/pages/portal.astro
+++ b/src/pages/portal.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro'
+import '../styles/portal-items.scss'
 ---
 <Layout title="Member Portal">
   <script is:inline src="portalpw.js"></script>
