make style.css into globals.scss and use it

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,8 @@ import Nav from '../components/nav.astro'
 import GlobalScripts from '../components/globalscripts.astro'
 import InfoBox from '../components/infobox.astro'
 
+import '../styles/globals.scss'
+
 export interface Props {
 	title: string;
 }
