--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ const { title } = Astro.props as Props;
   <body>
     <Nav />
     <slot />
-    <span style="display: none;" id="hidden" class="hidden" hidden tElement></span>
+    <span style="display: none;" class="hidden" hidden tElement></span>
     <GlobalScripts />
     <InfoBox />
   </body>
