--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1169,7 +1169,7 @@ ul#photos {
 
   #cSpan {
     position: absolute;
-    background-image: url('assets/icons/X.png') no-repeat fixed center !important;
+    background-image: url('/assets/icons/X.png') no-repeat fixed center !important;
     background-size: 100% !important;
     top: 12.5px;
     right: 12.5px;
