--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -236,11 +236,11 @@ nav {
 
       &#instagram {
         border-radius: 8px;
-        background-image: url('assets/icons/instagram.svg');
+        background-image: url('/assets/icons/instagram.svg');
       }
       
       &#email {
-        background-image: url('assets/icons/email.svg');
+        background-image: url('/assets/icons/email.svg');
       }
     }
   }
