--- a/src/components/nav.astro
+++ b/src/components/nav.astro
@@ -1,3 +1,6 @@
+---
+import '../styles/nav.scss'
+---
 <a id="go2content" href="javascript:scrollToNum()">Skip to Content</a>
 <nav>
   <div class="logo-parent">
@@ -13,7 +16,7 @@
       <a href="/mission" class="btn">Mission</a>
       <a href="/members" class="btn">Members</a>
       <a href="/work" class="btn">Member Work</a>
-      <a href="/Sign-Up" class="btn primary">Sign Up</a>
+      <a href="/ign-p" class="btn primary">Sign Up</a>
 <!--  <a href="/portal" class="btn">Portal</a>-->
     </div>
     <img id="nav-hbg" src="/assets/icons/hamburger-large.svg"/>
