--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,13 +11,17 @@ export interface Props {
 }
 
 const { title } = Astro.props as Props;
+
+let dTitle = `${title} | Graphics for Good`
+if (dTitle.startsWith(' | ')) dTitle = dTitle.replace(' | ', '')
+
 ---
 
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <MetaTags />
-    <title>{title} | Graphics for Good</title>
+    <title>{dTitle}</title>
   </head>
   <body>
     <Nav />
