--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,9 @@
 ---
 import Layout from '../layouts/Layout.astro'
+import Header from '../component/header.astro'
 ---
 <Layout title="Home">
-  <header id="content">
-    <section>
-      <div>
-        <h1>Graphics for Good</h1>
-        <h2>Empowering Non-Profits Through the Power of Design!</h1>
-      </div>
-    </section>
-  </header>
+  <Header idName="content" />
   <main id="mission">
     <div class="container">
       <section id="mSection">
