use header.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro'
-import Header from '../component/header.astro'
+import Header from '../components/header.astro'
 ---
 <Layout title="Home">
   <Header idName="content" />
