--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
 import Layout from '../layouts/Layout.astro'
-import Header from '../components/header.astro'
+import Hero from '../components/hero.astro'
 ---
 <Layout title="Home">
-  <Header idName="content" />
+  <Hero idName="content" />
   <main id="mission">
     <div class="container">
       <section id="mSection">
