--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,16 +1,28 @@
 ---
-export interface Props {
-	idName: string;
-}
-
-const { idName } = Astro.props as Props;
-
+import '../styles/header.scss'
 ---
-<header id={idName}>
-    <section>
-      <div>
-        <h1>Graphics for Good</h1>
-        <h2>Empowering Non-Profits Through the Power of Design!</h1>
+<a id="go2content" href="javascript:scrollToNum()">Skip to Content</a>
+<header class="header">
+  <div class="logo-parent">
+    <img id="logo" src="/assets/Logo-Blank.svg" alt="Graphics for Good Logo" title="Our Logo" onclick="location.href = '/'">
+  </div>
+  <div id="nav-btns">
+    <div>
+      <div class="nav-info">
+        <h3>Navigation</h3>
+        <img id="mob-nav-clse" class="icon" src="/assets/icons/X.svg">
       </div>
-    </section>
+      <a href="/" class="btn">Home</a>
+      <a href="/mission" class="btn">Mission</a>
+      <a href="/members" class="btn">Members</a>
+      <a href="/work" class="btn">Member Work</a>
+      <a href="/ign-p" class="btn primary">Sign Up</a>
+<!--  <a href="/portal" class="btn">Portal</a>-->
+    </div>
+    <img id="nav-hbg" src="/assets/icons/hamburger-large.svg"/>
+  </div>
+  <div id="social">
+    <a href="https://instagram.com/4goodgraphics" id="instagram"></a>
+    <a href="mailto:hello@graphics-for-good.com" id="email" target="_blank"></a>
+  </div>
 </header>
