--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -4,24 +4,24 @@ import '../styles/header.scss'
 <a id="go2content" href="javascript:scrollToNum()">Skip to Content</a>
 <header class="header">
   <div class="logo-parent">
-    <img id="logo" src="/assets/Logo-Blank.svg" alt="Graphics for Good Logo" title="Our Logo" onclick="location.href = '/'">
+    <img class="logo" src="/assets/Logo-Blank.svg" alt="Graphics for Good Logo" title="Our Logo" onclick="location.href = '/'">
   </div>
-  <div id="nav-btns">
+  <nav class="nav">
     <div>
       <div class="nav-info">
         <h3>Navigation</h3>
-        <img id="mob-nav-clse" class="icon" src="/assets/icons/X.svg">
+        <img id="mob-nav-clse" class="icon mob-nav-clse" src="/assets/icons/X.svg">
       </div>
       <a href="/" class="btn">Home</a>
       <a href="/mission" class="btn">Mission</a>
       <a href="/members" class="btn">Members</a>
       <a href="/work" class="btn">Member Work</a>
-      <a href="/ign-p" class="btn primary">Sign Up</a>
+      <a href="/sign-up" class="btn primary">Sign Up</a>
 <!--  <a href="/portal" class="btn">Portal</a>-->
     </div>
-    <img id="nav-hbg" src="/assets/icons/hamburger-large.svg"/>
-  </div>
-  <div id="social">
+    <img id="nav-hbg" class="nav-hbg" src="/assets/icons/hamburger-large.svg"/>
+  </nav>
+  <div class="social">
     <a href="https://instagram.com/4goodgraphics" id="instagram"></a>
     <a href="mailto:hello@graphics-for-good.com" id="email" target="_blank"></a>
   </div>
