--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -45,7 +45,7 @@ a#go2content[href="javascript:scrollToNum()"] {
       justify-content: center;
       align-items: center;
   
-      #logo {
+      .logo {
         max-height: 125px;
         border-radius: 100%;
         transition: 0.25s ease-in-out;
@@ -62,7 +62,7 @@ a#go2content[href="javascript:scrollToNum()"] {
     /*  margin: 0;  */
       --text-color: black;
     }
-    #nav-btns {
+    .nav {
       height: calc(100% - calc(var(--padding)*2));
       flex: 1;
       padding: var(--padding) 0;
@@ -79,16 +79,16 @@ a#go2content[href="javascript:scrollToNum()"] {
           transition: translate 1s ease;
         }
   
-        & > div.nav-info {
+        .nav-info {
           display: none;
         }
       }
-      #nav-hbg {
+      .nav-hbg {
         display: none;
       }
     }
     
-    & div#social {
+    .social {
       padding: var(--padding) var(--padding) var(--padding) 0;
       display: flex;
       flex-direction: row;
@@ -140,7 +140,7 @@ a#go2content[href="javascript:scrollToNum()"] {
   
   @media (width < 624px) {
     .header {
-      #nav-hbg {
+      .nav-hbg {
         --bg-color: white;
         outline: solid 1px black;
         border-radius: 5px;
@@ -151,7 +151,7 @@ a#go2content[href="javascript:scrollToNum()"] {
         cursor: pointer;
       }
       
-      div#nav-btns {
+      .nav {
         overflow-x: hidden;
   
         & > div {
@@ -171,7 +171,7 @@ a#go2content[href="javascript:scrollToNum()"] {
       
           box-shadow: 0px 0px 10px 0px var(--orig-bg-color);
   
-          & > div.nav-info {
+          .nav-info {
             display: flex;
             justify-content: right;
             align-items: center;
@@ -181,7 +181,7 @@ a#go2content[href="javascript:scrollToNum()"] {
               margin-block: 0;
             }
   
-            & > #mob-nav-clse {
+            .mob-nav-clse {
               --bg-color: white;
               outline: solid 1px black;
               border-radius: 5px;
