create and use footer.scss

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,6 +5,7 @@ import GlobalScripts from '../components/globalscripts.astro'
 import InfoBox from '../components/infobox.astro'
 
 import '../styles/globals.scss'
+import '../styles/footer.scss'
 
 export interface Props {
 	title: string;
