--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro'
 import Hero from '../components/hero.astro'
+
+import '../styles/pages/index.scss'
 ---
 <Layout title="Home">
   <Hero idName="content" />
