--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from '../layouts/Layout.astro'
 import Hero from '../components/hero.astro'
 
 import '../styles/pages/index.scss'
+import '../styles/photos.scss'
 ---
 <Layout title="Home">
   <Hero idName="content" />
