--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -1,5 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro'
+
+import '../styles/photos.scss'
 ---
 <Layout title="Member Work">
   <section id="content"></section>
