create and use carousel.scss

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Hero from '../components/hero.astro'
 
 import '../styles/pages/index.scss'
 import '../styles/photos.scss'
+import '../styles/carousel.scss'
 ---
 <Layout title="Home">
   <Hero idName="content" />
