create and use pages/members.scss

--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -1,5 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro'
+
+import '../styles/pages/members.scss'
 ---
 <Layout title="Members">
   <script is:inline src="/members.js"></script>
