create and use infobox.scss

--- a/src/components/infobox.astro
+++ b/src/components/infobox.astro
@@ -1,3 +1,6 @@
+---
+import '../styles/infobox.scss'
+---
 <dialog id="infobox">
   <div class="infobox-inner">
     <a href="javascript:infoBox.close()" draggable="false">
