--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ import '../styles/carousel.scss'
         <div id="contactDone" style="display: none;">
           <h3 align="center" style="font-size: 25px; display: none; margin: 0;">Thank You For Submitting!</h2>
         </div>
-        <form action="https://docs.google.com/forms/d/e/1FAIpQLSc4qjrt9QFOiGU4DHHjagYlVsYdS77KiXqwo967oeGySAVMnQ/formResponse" method="POST" style="">
+        <form class="contact" action="https://docs.google.com/forms/d/e/1FAIpQLSc4qjrt9QFOiGU4DHHjagYlVsYdS77KiXqwo967oeGySAVMnQ/formResponse" method="POST">
           <input type="text" name="entry.264713401" placeholder="Full Name" top required>
           <input type="email" name="entry.2027702877" placeholder="Email Address" required>
           <textarea type="text" name="entry.656122872" placeholder="Message" required></textarea>
