--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -2,6 +2,7 @@
 import Layout from '../layouts/Layout.astro'
 
 import '../styles/pages/members.scss'
+import '../styles/photos.scss'
 ---
 <Layout title="Members">
   <script is:inline src="/members.js"></script>
