--- a/src/styles/photos.scss
+++ b/src/styles/photos.scss
@@ -34,4 +34,49 @@ main.photos {
         }
     }
 }
+
+ul#photos {
+    margin: 0;
+    list-style: none;
+    padding: 0;
+    width: 100%;
+  
+    & > li {
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 25px;
+  
+        & > div {
+            flex: 1;
+            height: auto;
+        }
+  
+        & img {
+            width: 100%;
+            border-radius: 15px;
+            transition: 500ms ease-in-out;
+            cursor: pointer;
+  
+            &:hover {
+            border-radius: 10px;
+            transition: 500ms ease-in-out;
+            }
+        }
+  
+        & > img:not(& > div > img) {
+            flex: 1;
+            max-width: 100%;
+            height: auto;
+            border-radius: 15px;
+            transition: 500ms ease-in-out;
+            margin: auto 0;
+  
+            &:hover {
+            border-radius: 10px;
+            transition: 500ms ease-in-out;
+            }
+        }
+    }
+}  
   
