--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -25,7 +25,7 @@
   color: var(--text-color, white);
 }
 
-*:not(header *:not(.text, #menu, .missiontext), header, body, html) {
+*:not(.hero *:not(.text, #menu, .missiontext), .hero, body, html) {
   background-color: var(--bg-color, --orig-bg-color);
 }
 
